k8s/backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend-pod
spec:
  containers:
    - name: backend-container
      image: ghcr.io/bosh-wang/backend-image:latest  
      ports:
        - containerPort: 8888
