k8s/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend-pod
spec:
  containers:
    - name: frontend-container
      image: ghcr.io/bosh-wang/frontend-image:latest    # 需改成自己的 Image
      ports:
        - containerPort: 5173
